--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,13 @@ streamlit
 pandas
 gspread
 google-auth
+
 google-api-python-client
+
+streamlit==1.28.0
+pandas==2.0.3
+numpy==1.24.3
+plotly==5.17.0
+gspread==5.9.0
+google-auth==2.23.0
+requests==2.31.0
