--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
-streamlit==1.28.0
-pandas==2.0.3
-numpy==1.24.3
-gspread==5.9.0
-google-auth==2.23.0
-google-auth-httplib2==0.1.0
-google-api-python-client==2.104.0
-requests==2.31.0
+streamlit
+pandas
+gspread
+google-auth
+google-api-python-client
